# serializer version: 1
# name: test_select_entities_snapshot[select.nano_color_2_installation_season-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'winter',
        'side',
        'cooling',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.nano_color_2_installation_season',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Installation season',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:home-thermometer-outline',
    'original_name': 'Installation season',
    'platform': 'compit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nano_color_2_installation_season',
    'unique_id': '2___trybpracyinstalacji',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.nano_color_2_installation_season-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nano Color 2 Installation season',
      'icon': 'mdi:home-thermometer-outline',
      'options': list([
        'winter',
        'side',
        'cooling',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.nano_color_2_installation_season',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cooling',
  })
# ---
# name: test_select_entities_snapshot[select.r_900_source_of_the_co1_correction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'no_corrections',
        'clock',
        'thermostat',
        'nano_nr1',
        'nano_nr2',
        'nano_nr3',
        'nano_nr4',
        'nano_nr5',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.r_900_source_of_the_co1_correction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source of the CO1 correction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:tune-variant',
    'original_name': 'Source of the CO1 correction',
    'platform': 'compit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'r_900_source_of_the_co1_correction',
    'unique_id': '1___zrod_kore_co1',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[select.r_900_source_of_the_co1_correction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'R 900 Source of the CO1 correction',
      'icon': 'mdi:tune-variant',
      'options': list([
        'no_corrections',
        'clock',
        'thermostat',
        'nano_nr1',
        'nano_nr2',
        'nano_nr3',
        'nano_nr4',
        'nano_nr5',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.r_900_source_of_the_co1_correction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'clock',
  })
# ---
